--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.32.10",
+    "sass-loader": "^10.1.1",
     "typescript": "~4.1.5",
     "vue-template-compiler": "^2.6.11"
   }
